[package]
name = "grandpas_big_adventure"
version = "0.1.0"
authors = ["Tyler Boright <tyler@tylerboright.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[profile.dev]
opt-level = 1


[dependencies]
chrono = "0.4"
euclid = {version = "0.19", features=["mint"]}
fern = {version = "0.5", features = ["colored"] }
ggez = "0.5"
ggez-goodies = "0.5"
log = "0.4"
specs-derive = "0.4"
specs = "0.14"
warmy = "0.11"
